fix(core/datatable): revert horizontal scrollbar fix (#617)

--- a/assets/css/_ems.scss
+++ b/assets/css/_ems.scss
@@ -168,10 +168,6 @@ div.core-js-progress {
   & i { padding-right: 10px;}
 }
 
-div.dataTables_scroll {
-  margin-bottom: 10px;
-}
-
 button > * {
   pointer-events: none; /* icons clickable inside button, js using event.target */
 }
